--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,8 @@
   command = "npm run build"
   publish = "build"
   functions = "netlify/functions"
-  NODE_VERSION = "22"
+
+[functions]
+  node_version = "18"
+  node_bundler = "esbuild"
+  external_node_modules = ["@netlify/blobs"]
