--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,12 @@
+# netlify.toml
 [build]
   command = "npm run build"
   publish = "build"
   functions = "netlify/functions"
 
+[build.environment]
+  NODE_VERSION = "18"
+
 [functions]
-  node_version = "18"
   node_bundler = "esbuild"
   external_node_modules = ["@netlify/blobs"]
