--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command = "npm run build"
   publish = "build"
   functions = "netlify/functions"
+
+  [build.environment]
+SECRETS_SCAN_OMIT_KEYS = "REACT_APP_SUPABASE_ANON_KEY,REACT_APP_SUPABASE_URL"
